--- a/css/main.css
+++ b/css/main.css
@@ -24,18 +24,30 @@ body {
   margin: 0;
 }
 
+header {
+  background-color: #007eff;
+  text-align: center;
+  padding: 1rem;
+}
+
+header img {
+  width: 100%;
+  max-width: 10em;
+  text-align: center;
+}
+
 header h1 {
   margin: 0;
+  color: #fff;
+  font-family: "Lobster", cursive;
+  font-size: 3rem;
 }
 
-header nav {
-
+h2 {
+  font-family: "Lobster", cursive;
+  margin: 1rem;
 }
 
-header li {
-
-}
-
-header nav a {
-  
+.home {
+  width: 100%;
 }
