--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ header h1 {
   margin: 0;
   text-align: center;
   color: #fff;
-  font-family: "Lobster", cursive;
+  font-family: 'Lobster', cursive;
   font-size: 3rem;
 }
 
@@ -69,10 +69,55 @@ header h1 {
 }
 
 h2 {
-  font-family: "Lobster", cursive;
-  margin: 1rem;
+  font-family: 'Lobster', cursive;
+  padding: 1rem;
+  background-color: #404040;
+  color: #fff;
 }
 
-.home {
+.home-section {
+  background-color: #d5d5d5;
+}
+
+.home-img {
   width: 100%;
+  max-width: 25em;
+  padding: 0 1em;
+}
+
+.home-section p {
+  padding: 0 1em 1em;
+}
+
+.products-section {
+  background-color: #d5d5d5;
+}
+
+.products-section a {
+  text-decoration: none;
+  color: #000;
+}
+
+.product-body {
+  position: relative;
+}
+
+.product-card-img {
+  width: 100%;
+  max-width: 25em;
+  padding: 1em;
+}
+
+.product-card-body {
+  margin: 1em;
+  background-color: rgba(0, 126, 255, 0.25);
+  color: #fff;
+  z-index: 100;
+  position: absolute;
+  bottom: 0;
+  border-radius: 8px;
+}
+
+.product-body h3 {
+  padding: 1em;
 }
