--- a/css/main.css
+++ b/css/main.css
@@ -272,9 +272,36 @@ footer p {
     line-height: 1.3;
   }
 
+  .nav {
+    padding: 0 2em;
   }
+
   .nav li {
     display: inline-block;
+  }
+
+  .promo-card {
+    margin: 2em 1em;
+    overflow: hidden;
+  }
+
+  .promo-card-img {
+    float: left;
+    width: 45%;
+    margin: 0;
+  }
+
+  .promo-card-body {
+    float: right;
+    width: 45%;
+  }
+
+  .promo-card-body h3, .promo-card-body p {
+    margin: 1em;
+  }
+
+  .about-section {
+    clear: both;
   }
 }
 
