--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,19 @@ footer p {
     width: 40%;
     max-width: none;
   }
+
+  footer {
+    overflow: hidden;
+  }
+
+  footer img {
+    float: left;
+    width: 25%;
+  }
+
+  footer p {
+    padding: 2em;
+  }
 }
 
 @media only screen and (min-width: 60em) {
