--- a/css/main.css
+++ b/css/main.css
@@ -580,5 +580,52 @@ footer p {
     line-height: 1.5;
   }
 
-  //*in order to make the line length look good at large sizes, how about having extra images that present themselves at the largest screen size?*//
+  header img {
+    margin-left: 10em;
+  }
+
+  h2 {
+    font-size: 2rem;
+    padding-left: 6em;
+  }
+
+  .home-img {
+    margin-left: 10em;
+  }
+
+  .home-section p {
+    margin-right: 10em;
+  }
+
+  .card-wrapper {
+    margin: 0 10em;
+  }
+
+  .promo-list {
+    margin: 0 10em;
+  }
+
+  figure {
+    margin-left: 10em;
+  }
+
+  .about-beaus {
+    margin-right: 10em;
+  }
+
+  blockquote {
+    margin: 0 10em;
+  }
+
+  .contact-section-body {
+    margin: 0 10em;
+  }
+
+  .hours-wrapper {
+    margin: 0 10em;
+  }
+
+  footer img {
+    margin-left: 10em;
+  }
 }
