--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,9 @@ body {
 
 header {
   background-color: #007eff;
-  padding: 1em 0;
+  padding: 1em 0 40px;
   text-align: center;
+  position: relative;
 }
 
 header img {
@@ -47,8 +48,14 @@ header h1 {
 .nav {
   margin: 0;
   padding: 0;
+  border: .5em solid #404040;
   list-style-type: none;
   text-align: center;
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  width: 15em;
 }
 
 .nav li {
@@ -59,13 +66,58 @@ header h1 {
   color: #fff;
   display: block;
   padding: .5em .75em;
-  background-color: #007eff;
-  border-radius: 4px;
+  background-color: #d5d5d5;
+  color: #000;
   text-decoration: none;
 }
 
 .nav a:hover {
   background-color: #404040;
+  color: #fff;
+}
+
+.nav-check {
+  position: absolute;
+  top: -3em;
+}
+
+.nav-check:checked ~ .nav {
+  display: block;
+}
+
+.nav-label {
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin: .25em;
+  display: inline-block;
+  width: 40px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.nav-open,
+.nav-close {
+  display: block;
+  width: 100%;
+}
+
+.nav-check:checked ~ .nav-label {
+  background-color: #404040;
+  padding: .125em;
+  border-radius: 8px;
+}
+
+.nav-close {
+  display: none;
+}
+
+.nav-check:checked ~ .nav-label .nav-open {
+  display: none;
+}
+
+.nav-check:checked ~ .nav-label .nav-close {
+  display: block;
 }
 
 h2 {
